--- a/src/views/notFound.ejs
+++ b/src/views/notFound.ejs
@@ -1,9 +1,10 @@
-<html>
-    <body>
-        
-                404! Error !
-                No pudimos cargar esta pagina, verifica de nuevo la ruta a la cual estas intentando acceder
+<!DOCTYPE html>
+<html lang="es">
 
+    <%- include('partials/head') %>
+        <div class="notFoundContainer">
+            <span class="not-found">404! </span>
+            <p> No hemos podido encontrar esta pagina</p> <br>
+        </div>
 
-    </body>
 </html>
