--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <footer>
 
     <section class="footerTittle">
-        <h1> MUNDO TECH </h1>
-            <P> Mas que un producto, un estilo</P>
+        <h1> Mundo tech store </h1>
+            <h3>  Copyright © 2010-2023 MundoTechStore S.R.L. </h3>
    </section>
 
     <section class="detailsContainer">   
@@ -10,10 +10,10 @@
         <div class="details">
             <h3>SIGUENOS EN</h3>
                 <div class="redes">
-                    <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-linkedin"></i>
-                            <i class="fa-brands fa-instagram"></i>
-                                <i class="fa-brands fa-facebook"></i>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
                                     </div>
         </div>
 
@@ -28,10 +28,10 @@
         <div class="details">
             <h3>INFORMACIÓN</h3>
                 <ul class="listInfo">
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="/">Inicio</a></li>
                     <li><a href="#">Conocenos</a></li>
                     <li><a href="#">Categorias</a></li>
-                    <li><a href="#">Productos</a></li>
+                    <li><a href="/products">Productos</a></li>
                         </ul>
         </div>
 
