--- a/src/public/css/sliderCarrousel.css
+++ b/src/public/css/sliderCarrousel.css
@@ -15,7 +15,7 @@
 }
 
 .slider-frame img {
-	height: 150px;
+	height: 100%;
     width: 100%;
 }
 
@@ -107,82 +107,3 @@
 	100% {margin-left: -300%;}
 }
 
-/*--------- break Points------------------ */
-
-@media (min-width: 461px) {
-
-	.slider-frame img {
-		height: 250px;
-	}
-
-	.trending, .trendingTwo, .trendingThree {
-		width: calc(94% / 4);
-		text-align: center;
-	}
-}
-
-@media (min-width: 520px)  {
-
-	.carouselTitle {
-		height: 60px;
-	}
-}
-
-/*----- Tablet queries ------------- */
-
-@media (min-width: 769px) {
-
-	.carousel, .carouselTwo, .carouselThree{
-		margin-left: 35px;
-	}
-
-	.trending, .trendingTwo, .trendingThree {
-		width: calc(92% / 5);
-		text-align: center;
-	}
-
-	#prev, #prev2, #prev3{
-		margin-left: 2px;
-	}
-
-	#next, #next2, #next3 {
-	margin-right: 10px;
-	}
-
-}
-
-@media (min-width: 900px) {
-
-
-	.slider-frame img {
-    height: 400px;
-	text-align: center;
-
-	}
-
-	.carouselTitle {
-		height: 85px;
-	}
-
-	.trending, .trendingTwo, .trendingThree {
-		width: calc(97% / 5);
-		text-align: center;
-		font-size: 20px;
-	}
-
-	.trending p, .trendingTwo p, .trendingThree p {
-		font-size: 25px;
-		
-	}
-
-	.trending img, .trendingTwo img, .trendingThree img {
-		width: 110px;
-    	height: 120px;
-		border: none;
-	}
-
-	.trending h3, .trendingTwo h3, .trendingThree h3 {
-		font-size: 30px;
-	}
-
-}
