retrospectives & trello link

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -37,7 +37,7 @@
                     </li>
                 </ul>
                 </li>
-                <li><a href="#">Contactanos</a></li>
+                <li><a href="#aboutUs">Contactanos</a></li>
                 <li><a href="#">Sobre Nosotros</a></li>
             </ul>
             <ul class="loginIcon"> 
