--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -10,14 +10,15 @@
         <div class="details">
             <h3>SIGUENOS EN</h3>
                 <div class="redes">
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                                    </div>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://api.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+                            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                                        </div>
         </div>
 
-        <div class="details">
+        <div class="details" id="aboutUs">
             <h3>CONTACTO</h3>
                 <h4><i class="fa-solid fa-location-dot"></i> Ubicación</h4>
                     <h4><i class="fa-solid fa-phone"></i> 3219077777</h4>
