products cellphone in db

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -25,14 +25,7 @@
                         <li><a href="#">Samsung</a></li>
                         <li><a href="#">Huawei</a></li>
                         <li><a href="#">Realme</a></li>
-                        <li><a href="#">Xioami</a>
-                            <!-- Third Tier Drop Down -->
-                            <ul>
-                                <li><a href="#">MI</a></li>
-                                <li><a href="#">Poco</a></li>
-                                <li><a href="#">Redmi</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#">Xioami</a></li>
                     </ul>
                     </li>
                 </ul>
