--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,7 +13,7 @@
                     <li><a href="#">Accesorios</a></li>
                 </ul>        
                 </li>
-                <li><a href="/products">Productos</a>
+                <li><a href="/products/indexProduct">Productos</a>
                 <!-- First Tier Drop Down -->
                 <ul>
                     <li><a href="#">Accesorios</a></li>
