--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -32,7 +32,7 @@
                     <li><a href="/">Inicio</a></li>
                     <li><a href="#">Conocenos</a></li>
                     <li><a href="#">Categorias</a></li>
-                    <li><a href="/products">Productos</a></li>
+                    <li><a href="/products/indexProduct">Productos</a></li>
                         </ul>
         </div>
 
