--- a/src/public/css/partials.css
+++ b/src/public/css/partials.css
@@ -4,14 +4,13 @@
 		linear-gradient(23deg, #ebd40a, #58abf0, #f13493, #911491);
     background-repeat: no-repeat;
     background-size: cover;
-	background-blend-mode: screen;
-	animation: hue-rotate 5s linear infinite;
-	opacity: 0.9;
+	/* background-blend-mode: screen;
+	animation: hue-rotate 5s linear infinite; */
+	/* opacity: 0.9; */
 }
 
 .menu{
     display: none;
-    
     
 }
   
@@ -35,13 +34,12 @@ nav ul {
 
 .headerLogoContainer{
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     align-items: center;
 }
   
 .logo{
-    width: 50%;
-     box-shadow: 0px 0px 15px -2px #0000;
+    width: 35%
 }
   
 .loginIcon{
@@ -54,8 +52,7 @@ nav ul {
   
 .headerForm{
     display: flex;
-    align-items: baseline;
-    width: -webkit-fill-available;
+    width: 80%;
 }
   
 .searchingBar{
