--- a/src/views/products/indexProduct.ejs
+++ b/src/views/products/indexProduct.ejs
@@ -11,13 +11,29 @@
 
     <main>
 
-        
-
+        <section class="destacados">
+            <article class="DestacadosArt">
+                <% products.forEach((product)=> { %>
+                    <div class="infoDestacado">
+                        <img src="/img/<%= product.product_images[0]?product.product_images[0].url:'default.jpg' %>" alt="ST">
+                        <h4>
+                            <%= product.name %>
+                        </h4>
+                        <h4> <%= product.salePrice.toLocaleString('en-US', { style: 'currency', currency: 'COP' }) %>
+                        </h4>
+                        <!-- <p>& <%= product.description %></p> -->
+                        <button class="btn-add"><a class='button-detalle-de-producto'
+                                href="/products/detail/<%= product.id %>">DETALLE</a></button>
+                        <button class="btn-add prod">Agregar al carrito</button>
+                    </div>
+                    <% }) %>
+            </article>
+        </section>
 
 
     </main>
 
-        <%- include('../partials/footer') %>
+    <%- include('../partials/footer') %>
 
 </body>
 
