session cookies y auth

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,7 +5,7 @@
         <i class="fa-sharp fa-solid fa-bars"></i> 
             <ul  class="menu">
                 <li><a href="/">Home</a></li>
-                <li><a href="#">Categorias</a>
+                <li><a href="/products/categories">Categorias</a>
                 <!-- First Tier Drop Down -->
                 <ul>
                     <li><a href="#">Celulares</a></li>
