--- a/src/views/products/indexProduct.ejs
+++ b/src/views/products/indexProduct.ejs
@@ -11,6 +11,11 @@
 
     <main>
 
+        <h2> Todos los productos que del mercado aqui </h2>
+
+        <button class="btn-add"><a class='button-detalle-de-producto'
+            href="/products/create">crear Producto </a></button>
+
         <section class="destacados">
             <article class="DestacadosArt">
                 <% products.forEach((product)=> { %>
