--- a/src/views/users/loginRegister.ejs
+++ b/src/views/users/loginRegister.ejs
@@ -46,10 +46,13 @@
                   <div id="passwordError" class="error-message"><%= locals.errors.passW.msg %></div>
                 <% } %>
               </div>
+              <label >
+                <input type="checkbox" name="remenberMe"> Recordar mi usuario
+              </label>
             </fieldset>
             <div class="forms_buttons">
               <button type="button" class="forms_buttons-forgot">Has olvidado tu contrasenia?</button>
-              <button type="submit" id="submitButton" class="forms_buttons-action"> Login </button>
+              <button type="submit" id="submitButton" class="forms_buttons-action"> Logearme </button>
             </div>
           </form>
         </div>
