Crud db Products

--- a/src/views/products/createProduct.ejs
+++ b/src/views/products/createProduct.ejs
@@ -11,7 +11,7 @@
 
         <h1> CREAR PRODUCTO</h1>
 
-        <form method="POST" action="/products/createProduct" class=""  enctype="multipart/form-data"> 
+        <form method="POST" action="/products/create" class=""  enctype="multipart/form-data"> 
 
         <fieldset class="createForm">  
 
