--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -1,3 +1,7 @@
+<%- include('../partials/head') %>
+<body>
+    
+
 <div class="body-wrapper">
 
     <nav>
@@ -18,7 +22,7 @@
             <a class="menu-nav"> <i class="fa-solid fa-flag"></i>
                 <p>Notificaciones</p>
             </a>
-            <a class="menu-nav"><i class="fa-sharp fa-solid fa-gear"></i><br>
+            <a class="menu-nav"><i class="fa-sharp fa-solid fa-gear"></i>
                 <label for="me-toggle"> Configuracion</label>
                 <input id="me-toggle" type="checkbox" />
                 <div class="me-information-toggle">
@@ -104,8 +108,8 @@
 
 </div>
 
-</div>
+<%- include('../partials/footer') %>
 
-<%- include('partials/footer') %>
+
 
 </body>
