--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/queries.css">
     <link rel="stylesheet" href="/css/sliderCarrousel.css">
     <link rel="stylesheet" href="/css/loginRegister.css">
-    <!-- <link rel="stylesheet" href="/css/profile.css"> -->
+    <link rel="stylesheet" href="/css/profile.css">
     <link rel="stylesheet" href="/css/products.css">
     
 
