--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -33,8 +33,15 @@
                 <li><a href="#aboutUs">Contactanos</a></li>
                 <li><a href="#">Sobre Nosotros</a></li>
             </ul>
-            <ul class="loginIcon"> 
-                <li><a href="/users/loginRegister"> Iniciar session <i class="fa-solid fa-user"> </i> </a> </li>
+            <ul class="loginIcon">
+                <% if (locals.userLogged) { %>
+                <li><a href="/users/profile"> Perfil <i class="fa-solid fa-user"> </i> </a> </li>
+                 
+                <% } else { %> 
+                    <li><a href="/users/login"> Iniciar session <i class="fa-solid fa-user"> </i> </a> </li>
+                    <li><a href="/users/register"> Registrarse <i class="fa-solid fa-user"> </i> </a> </li>
+                <% } %>
+                
                 <li class="logged"><a href="/shoppingCar"> Carrito de compras <i class="fa-solid fa-cart-shopping"></i> </a> </li>
                 <li class="logged"><a href="#"> Favoritos <i class="fa-solid fa-star"></i> </a> </li>
             </ul>
